namespaces/live.cloud-platform.service.justice.gov.uk/reporting-hub-chart-builder-develop/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "reporting-hub-chart-builder-develop"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "project-ultron"
    cloud-platform.justice.gov.uk/application: "Reporting Hub Chart Builder"
    cloud-platform.justice.gov.uk/owner: "reporting-and-visualisation-hub: performance-dashboard@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/reporting-hub-chart-builder"
    cloud-platform.justice.gov.uk/team-name: "reporting-and-visualisation-hub"
    cloud-platform.justice.gov.uk/review-after: ""
